2012-10-?? Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.8
	* Version 1.5.8 released

2012-09-25 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* replace: change streamNtsteps() to vlistNtsteps() (bug fix for CDI 1.5.7)

2012-09-13 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added support for netCDF4(HDF5) formatted SCRIP grids

2012-09-07 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Info: changed output format
	* Diff: changed output format

2012-09-04 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* processDelete: set Process[processID].threadID = 0 (bug fix)

2012-09-03 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added CDO option -L to lock all I/O calls. This option is neccessary if external I/O libraries like 
	  netCDF4 (HDF5) were installed without thread-safe support.

2012-08-30 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Sinfo: changed output format

2012-08-28 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.7 (merged from cdi-pio)
	* activate pstreamCopyRecord()
	* Version 1.5.7 released

2012-08-23 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Arith: bug fix for NVARS1 == NVARS2
                    This bug was introduced in CDO version 1.5.6.

2012-07-26 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.5.6.1 released
	* arradd: disable SSE2 optimazation (bug in residual loop)
	    The following statistical functions are affected:
	        *mean, *avg, *sum, *var, *std
	    if all of the following conditions are  complied:
	       - x86_64 machine (tornado, squall, thunder, lizard)
	       - dataset has no missing values
	       - the horizontal grid size is > 1 and not multiple of 8
            This bug was introduced in CDO version 1.5.6.

2012-07-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.6
	* Version 1.5.6 released

2012-07-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Fixed bug #2605
